# naglasupan

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MISSION.md  Makefile  PROJECT_STATUS.md  README.md  SSR-proposal.md  TODO.md  backend-api-fastapi.txt  new-landing-page.md  pyproject.toml  requirements.txt  run.py  setup.sh  the-plan.txt
alembic/: env.py
app/core/: config.py
app/models/: base.py  user.py
app/routers/: auth.py
app/schemas/: auth.py  project.py
django-backend/: .env.example  Makefile  manage.py  openapi.json  pyproject.toml
django-backend/api/: main.py
django-backend/api/auth/: jwt.py  security.py
django-backend/api/routers/: admin.py  auth.py  my_projects.py  projects.py  tags.py
django-backend/api/schemas/: auth.py  errors.py  project.py  user.py
django-backend/apps/projects/: admin.py  models.py
django-backend/apps/projects/migrations/: 0002_initial.py
django-backend/apps/tags/: admin.py
django-backend/apps/users/: admin.py  models.py
django-backend/apps/users/migrations/: 0001_initial.py  0002_user_kennitala.py
django-backend/project_showcase/: settings.py  urls.py
django-backend/scripts/: extract_openapi.py
fastapi-backend/: .env.example  .envrc  Dockerfile  Makefile  README.md  alembic.ini  backend-api.txt  openapi.json  setup.sh
fastapi-backend/app/: main.py
fastapi-backend/app/core/: config.py  database.py  deps.py  security.py
fastapi-backend/app/models/: __init__.py  monthly_prize.py  project.py  project_view.py  tag.py
fastapi-backend/app/routers/: admin.py  my_projects.py  projects.py  tags.py
fastapi-backend/app/schemas/: __init__.py  analytics.py  tag.py  user.py
fastapi-backend/scripts/: dev-setup.sh
infra/prod/: .envrc
infra/prod/app/: .terraform.lock.hcl  cockpit.tf  container.tf  database.tf  dns.tf  domain.tf  iam.tf  main.tf  outputs.tf  storage.tf  variables.tf
infra/prod/app/.terraform/: terraform.tfstate
lib/python/devops/: pyproject.toml
lib/python/devops/src/devops/: cleanup_registry.py
nextjs-react-frontend/: README.md  next.config.ts  package-lock.json  package.json
nextjs-react-frontend/public/locales/en/: common.json
nextjs-react-frontend/public/locales/is/: common.json
nextjs-react-frontend/public/locales/pl/: common.json
nextjs-react-frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs-react-frontend/src/app/admin/: page.tsx
nextjs-react-frontend/src/app/login/: page.tsx
nextjs-react-frontend/src/app/my-projects/: page.tsx
nextjs-react-frontend/src/app/profile/: page.tsx
nextjs-react-frontend/src/app/projects/: page.tsx
nextjs-react-frontend/src/app/register/: page.tsx
nextjs-react-frontend/src/app/submit/: page.tsx
nextjs-react-frontend/src/components/: Header.tsx  LanguageSwitcher.tsx  ProjectCard.tsx  ThemeSwitcher.tsx
nextjs-react-frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx
nextjs-react-frontend/src/contexts/: AppContext.tsx  LanguageContext.tsx  ThemeContext.tsx
nextjs-react-frontend/src/hooks/: useModal.tsx  useThemeStyles.ts
nextjs-react-frontend/src/lib/: api.ts  dummy-data.ts  i18n.ts  utils.ts
nextjs-react-frontend/src/types/: api.ts
roadmap/: 2026-01.md
scripts/: app-common.mk  build.sh  common.sh  extract_openapi.py  launch-claude-swarm.sh  publish.sh
scripts/ci/: ci-ship.sh  ci.sh
scripts/claude-hooks/: on-notification.sh  on-stop.sh  reset-tab-color.sh
scripts/prod/: migrate.sh
src/django-backend/: .envrc  .gitignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  openapi.json  pyproject.toml
src/django-backend/api/: main.py
src/django-backend/api/auth/: security.py
src/django-backend/api/routers/: admin.py  auth.py  competitions.py  my_projects.py  my_review.py  projects.py  tags.py
src/django-backend/api/schemas/: auth.py  competition.py  my_review.py  project.py  tag.py  user.py
src/django-backend/project_showcase/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
src/django-backend/scripts/: extract_openapi.py
src/django-backend/tests/: conftest.py  factories.py  test_auth.py  test_competitions.py  test_my_projects.py  test_my_review.py  test_project_images.py  test_projects.py
src/web-ui/: .gitignore  Makefile  backend-openapi.json  entrypoint.sh  next.config.ts  package-lock.json  package.json
src/web-ui/playwright-report/: index.html
web-ui/: Dockerfile  Makefile  package-lock.json  package.json
web-ui/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
web-ui/src/components/: Navigation.tsx
web-ui/src/contexts/: auth.tsx
web-ui/src/lib/: api-server.ts
(+59 files in other folders)
